--- a/src/templates/public/response_sentence.html
+++ b/src/templates/public/response_sentence.html
@@ -1,28 +1,65 @@
-<!DOCTYPE html>
-<html lang="en-ca">
- <body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <title>RealOrNot</title>
+    <style>
+        html,
+        body {
+            height: 100%;
+        }
 
- {{ page_body }}
+        .centered-container {
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
 
-<form action="/verify_statement" method="post">
-    <p>Is our statement right?</p>
-<div>
-  <input type="checkbox" id="yes" name="yes"
-         checked>
-  <label for="yes">YES</label>
-</div>
-
-<div>
-  <input type="checkbox" id="no" name="no">
-  <label for="no">NO</label>
-</div>
-
-    <p>If the answer is no please provide a sentence that makes sense</p>
-    <input type="text" name="sentence"/>
-    <input type="submit" value="submit"/>
-
-</form>
-
-
- </body>
+        .no-underline-blue {
+            color: inherit;
+            text-decoration: inherit;
+        }
+    </style>
+  </head>
+  <body class="bg-light">
+      <div class="centered-container">
+        <div class="container">
+            <a href="/" class="no-underline-blue">
+            <div class="row justify-content-md-center">
+                <div class="col-md-auto">
+                    <img src="{{url_for('static', filename='abstract.svg')}}" widht="100px" height="100px"/>
+                </div>
+                <div class="col-md-auto">
+                    <h1>Real or Not</h1>
+                </div>
+            </div>
+            </a>
+            <div class="row mt-4 justify-content-center">
+                <div class="col col-6 align-self-center card bg-white shadow-sm p-4">
+                    <p class="font-weight-bold">{{ page_body }}</p>
+                    <form action="/verify_statement" method="post">
+                        <div class="mb-3">
+                            <p>Is our statement right?</p>
+                        
+                            <input type="checkbox" id="yes" name="yes" checked />
+                            <label for="yes">YES</label>
+                            <input type="checkbox" id="no" name="no" />
+                            <label for="no">NO</label>
+    
+                            <label for="confirmation" class="form-label">If the answer is no please provide a sentence that makes sense</label>
+                            <textarea class="form-control" id="phrase" rows="3" name="sentence"></textarea>
+                        </div>
+                        <div class="col text-center">
+                            <button type="submit" value="submit" class="btn btn-primary">Submit</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+      </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+  </body>
 </html>
