added security non functional initial implementation

--- a/src/templates/public/insert_sentence.html
+++ b/src/templates/public/insert_sentence.html
@@ -44,6 +44,11 @@
                             <label for="phrase" class="form-label">Generate truth analysis for phrase:</label>
                             <textarea class="form-control" id="phrase" rows="6" name="sentence"></textarea>
                         </div>
+                        <div class="mb-4">
+                            <label for="auth" class="form-label">Insert authentification token:</label>
+                            <textarea class="form-control" id="authId" rows="1" name="AuthorizationToken"></textarea>
+                        </div>
+
                         <div class="col text-center">
                             <button type="submit" class="btn btn-primary justify-content-center">Generate</button>
                         </div>
